force-app/main/default/objects/Incentive_Snapshot_Volume_Detail__c/Incentive_Snapshot_Volume_Detail__c.object-meta.xml
<CustomObject>
    <label>Incentive Snapshot Volume Detail</label>
    <nameField>
        <label>Incentive Snapshot Volume Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Snapshot Volume Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>