force-app/main/default/objects/Incentive_Snapshot_Volume_Detail__c/fields/Acomplished__c.field-meta.xml
<CustomField>
    <fullName>Acomplished__c</fullName>
    <label>Acomplished</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>