force-app/main/default/objects/Incentive_Snapshot_Volume_Detail__c/fields/Incentive_Contract_Volume_Goal__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract_Volume_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Contract Volume Goal</label>
    <referenceTo>Incentive_Contract_Volume_Goal__c</referenceTo>
    <relationshipLabel>Incentive Snapshot Volume Details</relationshipLabel>
    <relationshipName>Incentive_Snapshot_Volume_Details</relationshipName>
    <type>Lookup</type>
</CustomField>